Addressing Sonar's complaints.